  a FlowExecution.start (after becoming active but before having the current state set).
* Added various not null asserts to setters allowing overriding of required flow execution repository services.
* Changed ContinuationFlowExecutionRepositoryCreator's default 'maxContinuations' property to 0, setting 
  no upper bound on the number of continuations that can exist per conversation by default.

Package org.springframework.webflow.registry
* Improved ExternalizedFlowRegistrar, extracting a factory method for creating an ExternalizedFlowDefinition
  from a valid Resource location, and a template method for calculating if the location is actually a flow resource.
* Fixed a bug in AbstractFlowRegistryFactoryBean where a NPE would occur when configuring custom DefaultFlowServiceLocator services.
* Generally improved pluggability of core FlowBuilder services with the AbstractFlowRegistryFactoryBean,
  including the FlowArtifactFactory, BeanInvokingActionFactory, ExpressionParser, and parent ConversionService implementations.

Package org.springframework.webflow.test
* Added flowExecution not null asserts to signalEvent and refresh AbstractFlowExecutionTests operations.
  
Changes in version 1.0 RC1 (03.5.2006)
------------------------------------

Package org.springframework.webflow
* Added explict Flow variable support to this package; see Flow.addVariable and Flow.start
* Fixed a bug in ParameterMap related to multi-valued parameter access
* ParameterMap.get now returns the first element for a multi-valued parameter instead of throwing an exception
* Refined the semantics of flow input attribute mapping.  All input attributes passed into a flow 
  by a caller must now be explictly mapped by the flow.  To achieve this each Flow can be configured
  with an inputMapper; see Flow.setInputMapper and Flow.start.
* Removed the 'action' property of the DecisionState.  Use an ActionState if the purpose of the 